# wmaker-ng

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  RELEASING.md  ROADMAP.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit  pre-push  secret-scan.sh
.github/workflows/: release.yml  validate.yml
core-patches/: README.md
crates/ai-mcp/: Cargo.toml
crates/ai-mcp/src/: main.rs
crates/ai-proto/: Cargo.toml
crates/ai-proto/src/: lib.rs
crates/ng-automount/: Cargo.toml
crates/ng-automount/src/: main.rs
crates/ng-notify/: Cargo.toml
crates/ng-notify/src/: main.rs
crates/ng-power/: Cargo.toml
crates/ng-power/src/: main.rs
crates/wmng-dbus/: Cargo.toml
crates/wmng-dbus/src/: error.rs  lib.rs  login1.rs  udisks2.rs  upower.rs  util.rs
crates/wmng-ewmh/: Cargo.toml
crates/wmng-ewmh/examples/: smoke.rs
crates/wmng-ewmh/src/: error.rs  lib.rs
crates/wmng-x11/: Cargo.toml
crates/wmng-x11/examples/: smoke.rs
crates/wmng-x11/src/: capture.rs  damage.rs  error.rs  lib.rs
docs/: daily-driving-readiness.md
docs/measurement/: baseline-2026-06-28-current-wmaker.md  baseline-2026-06-28-facebook-activity-current-wmaker.md  benchmark-2026-07-01-ai-mcp-dirty-regions.md  screen-driving-baseline.md
docs/strategy/: agentic-screen-observation-brainstorm.md  agentic-screen-observation-strategy.md
ml/: README.md  pyproject.toml
ml/src/wmaker_ng_ml/: __init__.py
packaging/: README.md
packaging/nfpm/: wmaker-ai.yaml  wmaker-ng.yaml
sandbox/: Dockerfile  README.md
sandbox/browser/: AUTH.md  Dockerfile  README.md  launch.sh
scripts/: build.sh  collect-browser-activity-baseline.sh  collect-screen-baseline.sh  drive-browser.py  mcp-smoke.py  package.sh  publish.sh  repo-apk.sh  repo-apt.sh  repo-rpm.sh  tarball.sh
