[package]
name = "ai-proto"
description = "Screen-diff protocol + codec: XDamage dirty-rect deltas with keyframe re-baseline (PLAN §6)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
wmng-x11 = { path = "../wmng-x11" }
x11rb = { workspace = true, features = ["damage", "shm"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
png.workspace = true
