[package]
name = "wmng-x11"
description = "Shared X11 primitives for wmaker-ng/-ai: XDamage, XTEST, XShm, XFixes (x11rb)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# The exact extensions wmaker-ai drives over (PLAN §5/§6).
x11rb = { workspace = true, features = ["damage", "xtest", "shm", "xfixes"] }
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
